--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -32,7 +32,7 @@ section#login {
     overflow: hidden;
 
     background-color: white;
-    height: 500px;
+    height: 515px;
     width: 250px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.453);
@@ -52,4 +52,60 @@ section#login > div#imagem {
 section#login > div#formulário {
     display: block;
     padding: 10px;
+}
+
+div#formulário > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulário > p {
+    font-size: 0.3em;
+}
+
+form > div.camp {
+    background-color:  #A05FE3;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #E3E35F;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color: #2d6462;
+}
+
+form . a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #469e9b;
+    color: #2d6462;
+    border:  1px solid #49a09d;
+    border-radius: 7px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: #6cd3cf;
+}
 }
